force-app/main/default/objects/FieloCRUD__ObjectSettings__c/FieloCRUD__ObjectSettings__c.object-meta.xml
<CustomObject>
    <label>Object Setting</label>
    <nameField>
        <label>Object Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>