force-app/main/default/objects/FieloCRUD__ObjectSettings__c/fields/FieloCRUD__FieldMember__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldMember__c</fullName>
    <inlineHelpText>Complete this with the API name of the member lookup field related to this object.
This will ensure that only the related member can access records related to this object.</inlineHelpText>
    <label>Field Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>