force-app/main/default/objects/FieloCRUD__ObjectSettings__c/fields/FieloCRUD__FieldToDefinePageLayout__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldToDefinePageLayout__c</fullName>
    <inlineHelpText>Define the field API name that will determine which page layout applies to the object.</inlineHelpText>
    <label>Field To Define Page Layout</label>
    <length>80</length>
    <type>Text</type>
</CustomField>