force-app/main/default/objects/FieloCRUD__ObjectSettings__c/fields/FieloCRUD__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>