force-app/main/default/objects/FieloCRUD__ObjectSettings__c/validationRules/FieloCRUD__ObjectSetting_DuplicateName.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__ObjectSetting_DuplicateName</fullName>
    <active>true</active>
    <errorConditionFormula>/*
AND(
NOT(ISBLANK(VLOOKUP($ObjectType.FieloCRUD__ObjectSettings__c.Fields.Id, $ObjectType.FieloCRUD__ObjectSettings__c.Fields.FieloCRUD__ObjectAPIName__c, FieloCRUD__ObjectAPIName__c))),
Id != VLOOKUP($ObjectType.FieloCRUD__ObjectSettings__c.Fields.Id, $ObjectType.FieloCRUD__ObjectSettings__c.Fields.FieloCRUD__ObjectAPIName__c, FieloCRUD__ObjectAPIName__c)
)
*/
FALSE</errorConditionFormula>
    <errorDisplayField>FieloCRUD__ObjectAPIName__c</errorDisplayField>
    <errorMessage>There is already an object setting with that name!</errorMessage>
</ValidationRule>