force-app/main/default/objects/FieloCRUD__ObjectSettings__c/listViews/FieloCRUD__All.listView-meta.xml
<ListView>
    <fullName>FieloCRUD__All</fullName>
    <columns>NAME</columns>
    <columns>FieloCRUD__ObjectAPIName__c</columns>
    <columns>FieloCRUD__FieldMember__c</columns>
    <columns>FieloCRUD__FieldToDefinePageLayout__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>